; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_png.c_PredictPaeth.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_png.c_PredictPaeth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64)* @PredictPaeth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @PredictPaeth(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %12 = load i64, i64* %4, align 8
  %13 = trunc i64 %12 to i32
  %14 = load i64, i64* %5, align 8
  %15 = trunc i64 %14 to i32
  %16 = add nsw i32 %13, %15
  %17 = load i64, i64* %6, align 8
  %18 = trunc i64 %17 to i32
  %19 = sub nsw i32 %16, %18
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i64, i64* %4, align 8
  %22 = trunc i64 %21 to i32
  %23 = sub nsw i32 %20, %22
  %24 = call i32 @abs(i32 %23) #2
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i64, i64* %5, align 8
  %27 = trunc i64 %26 to i32
  %28 = sub nsw i32 %25, %27
  %29 = call i32 @abs(i32 %28) #2
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load i64, i64* %6, align 8
  %32 = trunc i64 %31 to i32
  %33 = sub nsw i32 %30, %32
  %34 = call i32 @abs(i32 %33) #2
  store i32 %34, i32* %11, align 4
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %10, align 4
  %37 = icmp sle i32 %35, %36
  br i1 %37, label %38, label %44

38:                                               ; preds = %3
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %11, align 4
  %41 = icmp sle i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %38
  %43 = load i64, i64* %4, align 8
  store i64 %43, i64* %7, align 8
  br label %53

44:                                               ; preds = %38, %3
  %45 = load i32, i32* %10, align 4
  %46 = load i32, i32* %11, align 4
  %47 = icmp sle i32 %45, %46
  br i1 %47, label %48, label %50

48:                                               ; preds = %44
  %49 = load i64, i64* %5, align 8
  store i64 %49, i64* %7, align 8
  br label %52

50:                                               ; preds = %44
  %51 = load i64, i64* %6, align 8
  store i64 %51, i64* %7, align 8
  br label %52

52:                                               ; preds = %50, %48
  br label %53

53:                                               ; preds = %52, %42
  %54 = load i64, i64* %7, align 8
  ret i64 %54
}

; Function Attrs: nounwind readnone
declare dso_local i32 @abs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
